<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missingBank"
        android:textColor="#000"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/missingBankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorAccent"
        android:hint="@string/missingBankname"
        android:layout_margin="15dp"
        app:boxStrokeErrorColor="#FF9933"
        app:hintTextColor="@color/colorAccent"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/missingBankAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/missingBankAddress"
        android:layout_margin="15dp"
        app:boxStrokeErrorColor="#FF9933"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/missingBankSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missingBankSend"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"/>



</LinearLayout>